v2.5.9.0 - Added multipart EXR support for multiple parts (new pass system) 
	   and stereo (anaglyph, horizontal and crosseyed).  
	   Support is given for deepscanline and scanline images.
	   Note that there is no support for deep compositing yet.
	 - Bug fixed pixel aspect ratio in EXR images.
	 - Bug fixed normalize in EXR images.

v2.5.8.2 - Drag and Drop now supports dragging directories to load all that
	   is found inside them.
	 - Drag and Drop now supports dragging single files like mp3s.
	 - Drag and Drop now supports files with spaces and brackets (Linux).
	 - Color Info window now displays the gamma/gain'ed image values
	   instead of just the original values.
	 - MultiView images (Stereo) now supports a side-by-side and
	   crossed eye views.
	 - MultiView images (Stereo) now supports multiple animated images.
	 - Bug fixed loading of directory for parent ( .. ) directory.
	 - Single images are now cached in memory.  Previously, they would
	   be loaded in every time.

v2.5.8.1 - Bug fixed drag and drop of sequences as it had gotten broken.
	 - Bug fixed preview pictures which could show wrong colors in movie
	   files.
	 - Removed a warning of wrong OpenGL pixel type.
	 - Added support to load all sequences and movies in a directory 
	   through command-line.  Example:

	   $ mrViewer .

	 - Added -a audio flag to load sequences with audio attached.
	 - Made added audio appear in the audio drop-down window in the
	   interface, allowing user to toggle the audio of a movie file with
	   the audio of music or dialogue brought from outside.

v2.5.8.0 - Bug fixed Reel/EDL window when two reels were loaded and clips could
	   not be selected.
	 - Bug fixed EDL Edit window to support more than two reels.
	 - Updated all platforms to use ffmpeg 2.2
	 - Bug fixed some movies not starting at first frame.
	 - Bug fixed crash when loading two or more EXRs simultaneously.
	 - Fixed red and blue dots in preview pictures.